--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,4 +1,4 @@
-<a href="https://facebook.com/{{ include.username }}">
+<a href="https://facebook.com/{{ include.username }}" target="_blank">
     <span class="icon icon--facebook">
         <img src="{{ site.icon_image_url }}FB-f-Logo__blue_29.png" class="icon"/>
     </span>
