--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
+
       </div>
 
       <div class="footer-col footer-col-2">
@@ -36,9 +37,11 @@
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
+      <div><p>&copy; 2016 Henry Ayres. All rights reserved.</p></div>
     </div>
 
   </div>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
