--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,5 +14,13 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+  <div class="PageNavigation">
+    {% if page.previous.url %}<p>
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a></p>
+    {% endif %}
+    {% if page.next.url %}<p>
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  </p>
+    {% endif %}
+  </div>
 </article>
